New function works to find player in JSON

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		<div class="whiteline"></div>
 		<a class="playerpos" href="#pop-x" data-rel="popup" id="pos-x">X</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-x">
-				<h2>Wide reciever</h2><br />
+				<h2>X receiver</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player?player=jerry-johnson"><h1><span class="ui-li-count">#9</span> Jerry Johnson</h1></a></li>
-					<li><a href="#player?player=tyler-scott">Tyler Scott</a></li>
-					<li><a href="#player?player=logan-sweet">Logan Sweet</a></li>
+					<li><a href="#player-info?player=jerry-johnson"><h1><span class="ui-li-count">#9</span> Jerry Johnson</h1></a></li>
+					<li><a href="#player-info?player=tyler-scott">Tyler Scott</a></li>
+					<li><a href="#player-info?player=logan-sweet">Logan Sweet</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#" data-rel="popup" id="pos-lt">LT</a>
@@ -84,7 +84,7 @@
 </div><!-- /page -->
 
 
-<div data-role="page" id="player" data-add-back-btn="true">
+<div data-role="page" id="player-info" data-add-back-btn="true">
 
 	<div data-role="header">
 		<h1>Player info</h1>
