Added markup and fixed the JSON file to make Offense work correctly.

--- a/index.html
+++ b/index.html
@@ -40,21 +40,108 @@
 				<h2>X receiver</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=jerry-johnson"><h1><span class="ui-li-count">#9</span> Jerry Johnson</h1></a></li>
-					<li><a href="#player-info?player=tyler-scott">Tyler Scott</a></li>
-					<li><a href="#player-info?player=logan-sweet">Logan Sweet</a></li>
+					<li><a href="#player-info?player=tyler-scott"><span class="ui-li-count">#81</span> Tyler Scott</a></li>
+					<li><a href="#player-info?player=logan-sweet"><span class="ui-li-count">#86</span> Logan Sweet</a></li>
 				</ul>
 			</div>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-lt">LT</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-lg">LG</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-oc">OC</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-rg">RG</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-rt">RT</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-y">Y</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-f">F</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-qb">QB</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-fb">FB</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-tb">TB</a>
-		<a class="playerpos" href="#" data-rel="popup" id="pos-z">Z</a>
+		<a class="playerpos" href="#pop-lt" data-rel="popup" id="pos-lt">LT</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lt">
+				<h2>Left tackle</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=xavier-suafilo"><h1><span class="ui-li-count">#56</span> Xavier Su'a-Filo</h1></a></li>
+					<li><a href="#player-info?player=torian-white"><span class="ui-li-count">#77</span> Torian White</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-lg" data-rel="popup" id="pos-lg">LG</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lg">
+				<h2>Left guard</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=greg-capella"><h1><span class="ui-li-count">#64</span> Greg Capella</h1></a></li>
+					<li><a href="#player-info?player=jake-seydel"><span class="ui-li-count">#66</span> Jake Seydel</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-oc" data-rel="popup" id="pos-oc">OC</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-oc">
+				<h2>Center</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jake-brendel"><h1><span class="ui-li-count">#54</span> Jake Brendel</h1></a></li>
+					<li><a href="#player-info?player=tre-hale"><span class="ui-li-count">#51</span> Tre' Hale</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-rg" data-rel="popup" id="pos-rg">RG</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rg">
+				<h2>Right guard</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jeff-baca"><h1><span class="ui-li-count">#60</span> Jeff Baca</h1></a></li>
+					<li><a href="#player-info?player=alexandru-ceachir"><span class="ui-li-count">#76</span> Alexandru Ceachir</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-rt" data-rel="popup" id="pos-rt">RT</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rt">
+				<h2>Right tackle</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=brett-downey"><h1><span class="ui-li-count">#78</span> Brett Downey</h1></a></li>
+					<li><a href="#player-info?player=conor-mcdermott"><span class="ui-li-count">#68</span> Conor McDermott</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-y" data-rel="popup" id="pos-y">Y</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-y">
+				<h2>Y receiver</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=darius-bell"><h1><span class="ui-li-count">#3</span> Darius Bell</h1></a></li>
+					<li><a href="#player-info?player=joseph-fauria"><span class="ui-li-count">#8</span> Joseph Fauria</a></li>
+					<li><a href="#player-info?player=ian-taubler"><span class="ui-li-count">#87</span> Ian Taubler</a></li>
+
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-f" data-rel="popup" id="pos-f">F</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-f">
+				<h2>F receiver</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=steven-manfro"><h1><span class="ui-li-count">#33</span> Steven Manfro</h1></a></li>
+					<li><a href="#player-info?player=kenny-walker"><span class="ui-li-count">#21</span> Kenny Walker</a></li>
+					<li><a href="#player-info?player=roosevelt-davis"><span class="ui-li-count">#22</span> Roosevelt Davis</a></li>
+
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-qb" data-rel="popup" id="pos-qb">QB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-qb">
+				<h2>Quarterback</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=brett-hundley"><h1><span class="ui-li-count">#17</span> Brett Hundley</h1></a></li>
+					<li><a href="#player-info?player=richard-brehaut"><span class="ui-li-count">#12</span> Richard Brehaut</a></li>
+					<li><a href="#player-info?player=jerry-neuheisel"><span class="ui-li-count">#11</span> Jerry Neuheisel</a></li>
+					<li><a href="#player-info?player=kevin-prince"><span class="ui-li-count">#4</span> Kevin Prince</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-fb" data-rel="popup" id="pos-fb">FB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-fb">
+				<h2>Fullback</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=david-allen"><h1><span class="ui-li-count">#41</span> David Allen</h1></a></li>
+					<li><a href="#player-info?player=phillip-ruhl"><span class="ui-li-count">#44</span> Phillip Ruhl</a></li>
+					<li><a href="#player-info?player=luke-gane"><span class="ui-li-count">#49</span> Luke Gane</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-tb" data-rel="popup" id="pos-tb">TB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-tb">
+				<h2>Tailback</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=johnathan-franklin"><h1><span class="ui-li-count">#23</span> Johnathan Franklin</h1></a></li>
+					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
+					<li><a href="#player-info?player=damien-thigpen"><span class="ui-li-count">#25</span> Damien Thigpen</a></li>
+					<li><a href="#player-info?player=malcolm-jones"><span class="ui-li-count">#28</span> Malcolm Jones</a></li>
+				</ul>
+			</div>
+		<a class="playerpos" href="#pop-z" data-rel="popup" id="pos-z">Z</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-z">
+				<h2>Z receiver</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=shaquelle-evans"><h1><span class="ui-li-count">#1</span> Shaquelle Evans</h1></a></li>
+					<li><a href="#player-info?player=devin-lucien"><span class="ui-li-count">#15</span> Devin Lucien</a></li>
+					<li><a href="#player-info?player=ricky-marvray"><span class="ui-li-count">#7</span> Ricky Marvray</a></li>
+				</ul>
+			</div>
 	</div><!-- /content -->
 
 	<div data-role="footer">
