Fixed back button

--- a/index.html
+++ b/index.html
@@ -171,14 +171,15 @@
 </div><!-- /page -->
 
 
-<div data-role="page" id="player-info" data-add-back-btn="true">
+<div data-role="page" id="player-info">
 
 	<div data-role="header">
+		<a href="index.html" data-icon="arrow-l" data-direction="reverse">Back</a>
 		<h1>Player info</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<p>Page content goes here.</p>	
+		<p>Player data not found.</p>	
 	</div><!-- /content -->
 
 	<div data-role="footer">
