Adjusted offense positioning

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					<li><a href="#player-info?player=jake-seydel"><span class="ui-li-count">#66</span> Jake Seydel</a></li>
 				</ul>
 			</div>
-		<a class="playerpos" href="#pop-oc" data-rel="popup" id="pos-oc">OC</a>
-			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-oc">
+		<a class="playerpos" href="#pop-c" data-rel="popup" id="pos-c">C</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-c">
 				<h2>Center</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=jake-brendel"><h1><span class="ui-li-count">#54</span> Jake Brendel</h1></a></li>
