Finished defense lineup.

--- a/index.html
+++ b/index.html
@@ -175,15 +175,95 @@
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-nt" data-rel="popup" id="pos-nt">NT</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-nt">
+				<h2>Nose tackle</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=sealii-epenesa"><h1><span class="ui-li-count">#98</span> Seali&rsquo;i Epenesa</h1></a></li>
+					<li><a href="#player-info?player=brandon-willis"><span class="ui-li-count">#92</span> Brandon Willis</a></li>
+					<li><a href="#player-info?player=kevin-mcreynolds"><span class="ui-li-count">#77</span> Kevin McReynolds</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-re" data-rel="popup" id="pos-re">RE</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-re">
+				<h2>Right end</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=cassius-marsh"><h1><span class="ui-li-count">#99</span> Cassius Marsh</h1></a></li>
+					<li><a href="#player-info?player=donovan-carter"><span class="ui-li-count">#90</span> Donovan Carter</a></li>
+					<li><a href="#player-info?player=brandon-tuliaupupu"><span class="ui-li-count">#95</span> Brandon Tuliaupupu</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-lolb" data-rel="popup" id="pos-lolb">LOLB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lolb">
+				<h2>Left outside linebacker</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jordan-zumwalt"><h1><span class="ui-li-count">#35</span> Jordan Zumwalt</h1></a></li>
+					<li><a href="#player-info?player=nate-iese"><span class="ui-li-count">#15</span> Nate Iese</a></li>
+					<li><a href="#player-info?player=aramide-olaniyan"><span class="ui-li-count">#14</span> Aramide Olaniyan</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-lilb" data-rel="popup" id="pos-lilb">LILB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lilb">
+				<h2>Left inside linebacker</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=damien-holmes"><h1><span class="ui-li-count">#43</span> Damien Holmes</h1></a></li>
+					<li><a href="#player-info?player=aaron-porter"><span class="ui-li-count">#30</span> Aaron Porter</a></li>
+					<li><a href="#player-info?player=todd-golper"><span class="ui-li-count">#55</span> Todd Golper</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-rilb" data-rel="popup" id="pos-rilb">RILB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rilb">
+				<h2>Right inside linebacker</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=eric-kendricks"><h1><span class="ui-li-count">#6</span> Eric Kendricks</h1></a></li>
+					<li><a href="#player-info?player=ryan-hofmeister"><span class="ui-li-count">#33</span> Ryan Hofmeister</a></li>
+					<li><a href="#player-info?player=kenny-orjioke"><span class="ui-li-count">#23</span> Kenny Orjioke</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-rolb" data-rel="popup" id="pos-rolb">ROLB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rolb">
+				<h2>Right outside linebacker</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=anthony-barr"><h1><span class="ui-li-count">#11</span> Anthony Barr</h1></a></li>
+					<li><a href="#player-info?player=keenan-graham"><span class="ui-li-count">#40</span> Keenan Graham</a></li>
+					<li><a href="#player-info?player=aaron-wallace"><span class="ui-li-count">#12</span> Aaron Wallace</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-lcb" data-rel="popup" id="pos-lcb">LCB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lcb">
+				<h2>Left cornerback</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=sheldon-price"><h1><span class="ui-li-count">#22</span> Sheldon Price</h1></a></li>
+					<li><a href="#player-info?player=ishmael-adams"><span class="ui-li-count">#24</span> Ishmael Adams</a></li>
+					<li><a href="#player-info?player=fabian-moreau"><span class="ui-li-count">#10</span> Fabian Moreau</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-rcb" data-rel="popup" id="pos-rcb">RCB</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rcb">
+				<h2>Right cornerback</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=aaron-hester"><h1><span class="ui-li-count">#21</span> Aaron Hester</h1></a></li>
+					<li><a href="#player-info?player=marcus-rios"><span class="ui-li-count">#9</span> Marcus Rios</a></li>
+					<li><a href="#player-info?player=randall-goforth"><span class="ui-li-count">#3</span> Randall Goforth</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-ss" data-rel="popup" id="pos-ss">SS</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-ss">
+				<h2>Strong safety</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=andrew-abbott"><h1><span class="ui-li-count">#26</span> Andrew Abbott</h1></a></li>
+					<li><a href="#player-info?player=dalton-hilliard"><span class="ui-li-count">#19</span> Dalton Hilliard</a></li>
+					<li><a href="#player-info?player=anthony-jefferson"><span class="ui-li-count">#8</span> Anthony Jefferson</a></li>
+				</ul>
+			</div>
 		<a class="playerpos" href="#pop-fs" data-rel="popup" id="pos-fs">FS</a>
+			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-fs">
+				<h2>Free safety</h2><br />
+				<ul data-role="listview">
+					<li><a href="#player-info?player=tevin-mcdonald"><h1><span class="ui-li-count">#7</span> Tevin McDonald</h1></a></li>
+					<li><a href="#player-info?player=stan-mckay"><span class="ui-li-count">#4</span> Stan McKay</a></li>
+					<li><a href="#player-info?player=brandon-sermons"><span class="ui-li-count">#2</span> Brandon Sermons</a></li>
+				</ul>
+			</div>
 	</div><!-- /content -->
 
 	<div data-role="footer">
