--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 		<h1>Depth chart</h1>
 		<div data-role="navbar">
 			<ul>
-				<li><a href="#offense" data-transition="none" class="ui-btn-active ui-state-persist">Offense</a></li>
-				<li><a href="#defense" data-transition="none">Defense</a></li>
+				<li><a href="#offense" data-transition="none">Offense</a></li>
+				<li><a href="#defense" data-transition="none" class="ui-btn-active ui-state-persist">Defense</a></li>
 				<li><a href="#specialists" data-transition="none">Specialists</a></li>
 			</ul>
 		</div><!-- /navbar -->
@@ -292,15 +292,48 @@
 			<li>Place kicker
 				<ul data-role="listview">
 					<li><a href="#player-info?player=kaimi-fairbairn"><span class="ui-li-count">#15</span> Ka'imi Fairbairn</a></li>
-				<li><a href="#player-info?player=justin-moreno"><span class="ui-li-count">#17</span> Justin Moreno</a></li>
+					<li><a href="#player-info?player=justin-moreno"><span class="ui-li-count">#17</span> Justin Moreno</a></li>
 				</ul>
 			</li>
-			<li>Kickoff</li>
-			<li>Punter</li>
-			<li>Long snapper</li>
-			<li>Holder</li>
-			<li>Punt return</li>
-			<li>Kickoff return</li>
+			<li>Kickoff
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jeff-locke"><span class="ui-li-count">#18</span> Jeff Locke</a></li>
+					<li><a href="#player-info?player=kaimi-fairbairn"><span class="ui-li-count">#15</span> Ka'imi Fairbairn</a></li>
+				</ul>
+			</li>
+			<li>Punter
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jeff-locke"><span class="ui-li-count">#18</span> Jeff Locke</a></li>
+					<li><a href="#player-info?player=justin-moreno"><span class="ui-li-count">#17</span> Justin Moreno</a></li>
+				</ul>
+			</li>
+			<li>Long snapper
+				<ul data-role="listview">
+					<li><a href="#player-info?player=kevin-mcdermott"><span class="ui-li-count">#48</span> Kevin McDermott</a></li>
+					<li><a href="#player-info?player=christopher-longo"><span class="ui-li-count">#53</span> Christopher Longo</a></li>
+				</ul>
+			</li>
+			<li>Holder
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jeff-locke"><span class="ui-li-count">#18</span> Jeff Locke</a></li>
+					<li><a href="#player-info?player=jerry-neuheisel"><span class="ui-li-count">#11</span> Jerry Neuheisel</a></li>
+				</ul>
+			</li>
+			<li>Punt return
+				<ul data-role="listview">
+					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
+					<li><a href="#player-info?player=shaquelle-evans"><span class="ui-li-count">#1</span> Shaquelle Evans</a></li>
+					<li><a href="#player-info?player=steven-manfro"><span class="ui-li-count">#33</span> Steven Manfro</a></li>
+				</ul>
+			</li>
+			<li>Kickoff return
+				<ul data-role="listview">
+					<li><a href="#player-info?player=steven-manfro"><span class="ui-li-count">#33</span> Steven Manfro</a></li>
+					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
+					<li><a href="#player-info?player=damien-thigpen"><span class="ui-li-count">#25</span> Damien Thigpen</a></li>
+					<li><a href="#player-info?player=johnathan-franklin"><span class="ui-li-count">#23</span> Johnathan Franklin</a></li>
+				</ul>
+			</li>
 		</ul>
 	</div><!-- /content -->
 
