--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lt">
 				<h2>Left tackle</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player-info?player=xavier-suafilo"><h1><span class="ui-li-count">#56</span> Xavier Su'a-Filo</h1></a></li>
-					<li><a href="#player-info?player=torian-white"><span class="ui-li-count">#77</span> Torian White</a></li>
+					<li><a href="#player-info?player=torian-white"><h1><span class="ui-li-count">#77</span> Torian White</h1></a></li>
+					<li><a href="#player-info?player=xavier-suafilo"><span class="ui-li-count">#56</span> Xavier Su'a-Filo</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-lg" data-rel="popup" id="pos-lg">LG</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lg">
 				<h2>Left guard</h2><br />
 				<ul data-role="listview">
+					<li><a href="#player-info?player=xavier-suafilo"><h1><span class="ui-li-count">#56</span> Xavier Su'a-Filo</h1></a></li>
 					<li><a href="#player-info?player=greg-capella"><h1><span class="ui-li-count">#64</span> Greg Capella</h1></a></li>
-					<li><a href="#player-info?player=jake-seydel"><span class="ui-li-count">#66</span> Jake Seydel</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-c" data-rel="popup" id="pos-c">C</a>
@@ -93,24 +93,24 @@
 				<h2>Right guard</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=jeff-baca"><h1><span class="ui-li-count">#60</span> Jeff Baca</h1></a></li>
-					<li><a href="#player-info?player=alexandru-ceachir"><span class="ui-li-count">#76</span> Alexandru Ceachir</a></li>
+					<li><a href="#player-info?player=brett-downey"><span class="ui-li-count">#78</span> Brett Downey</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-rt" data-rel="popup" id="pos-rt">RT</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-rt">
 				<h2>Right tackle</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player-info?player=brett-downey"><h1><span class="ui-li-count">#78</span> Brett Downey</h1></a></li>
-					<li><a href="#player-info?player=conor-mcdermott"><span class="ui-li-count">#68</span> Conor McDermott</a></li>
+					<li><a href="#player-info?player=simon-goines"><h1><span class="ui-li-count">#70</span> Simon Goines</h1></a></li>
+					<li><a href="#player-info?player=brett-downey"><span class="ui-li-count">#78</span> Brett Downey</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-y" data-rel="popup" id="pos-y">Y</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-y">
 				<h2>Y receiver</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player-info?player=darius-bell"><h1><span class="ui-li-count">#3</span> Darius Bell</h1></a></li>
-					<li><a href="#player-info?player=joseph-fauria"><span class="ui-li-count">#8</span> Joseph Fauria</a></li>
-					<li><a href="#player-info?player=ian-taubler"><span class="ui-li-count">#87</span> Ian Taubler</a></li>
+					<li><a href="#player-info?player=joseph-fauria"><h1><span class="ui-li-count">#8</span> Joseph Fauria</h1></a></li>
+					<li><a href="#player-info?player=darius-bell"><span class="ui-li-count">#3</span> Darius Bell</a></li>
+					<li><a href="#player-info?player=devin-fuller"><span class="ui-li-count">#2</span> Devin Fuller</a></li>
 
 				</ul>
 			</div>
@@ -120,7 +120,7 @@
 				<ul data-role="listview">
 					<li><a href="#player-info?player=steven-manfro"><h1><span class="ui-li-count">#33</span> Steven Manfro</h1></a></li>
 					<li><a href="#player-info?player=kenny-walker"><span class="ui-li-count">#21</span> Kenny Walker</a></li>
-					<li><a href="#player-info?player=roosevelt-davis"><span class="ui-li-count">#22</span> Roosevelt Davis</a></li>
+					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
 
 				</ul>
 			</div>
@@ -150,7 +150,6 @@
 					<li><a href="#player-info?player=johnathan-franklin"><h1><span class="ui-li-count">#23</span> Johnathan Franklin</h1></a></li>
 					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
 					<li><a href="#player-info?player=damien-thigpen"><span class="ui-li-count">#25</span> Damien Thigpen</a></li>
-					<li><a href="#player-info?player=malcolm-jones"><span class="ui-li-count">#28</span> Malcolm Jones</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-z" data-rel="popup" id="pos-z">Z</a>
@@ -158,7 +157,7 @@
 				<h2>Z receiver</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=shaquelle-evans"><h1><span class="ui-li-count">#1</span> Shaquelle Evans</h1></a></li>
-					<li><a href="#player-info?player=devin-lucien"><span class="ui-li-count">#15</span> Devin Lucien</a></li>
+					<li><a href="#player-info?player=jordan-payton"><span class="ui-li-count">#10</span> Jordan Payton</a></li>
 					<li><a href="#player-info?player=ricky-marvray"><span class="ui-li-count">#7</span> Ricky Marvray</a></li>
 				</ul>
 			</div>
@@ -201,7 +200,7 @@
 				<ul data-role="listview">
 					<li><a href="#player-info?player=sealii-epenesa"><h1><span class="ui-li-count">#98</span> Seali&rsquo;i Epenesa</h1></a></li>
 					<li><a href="#player-info?player=brandon-willis"><span class="ui-li-count">#92</span> Brandon Willis</a></li>
-					<li><a href="#player-info?player=kevin-mcreynolds"><span class="ui-li-count">#77</span> Kevin McReynolds</a></li>
+					<li><a href="#player-info?player=donovan-carter"><span class="ui-li-count">#90</span> Donovan Carter</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-re" data-rel="popup" id="pos-re">RE</a>
@@ -209,26 +208,25 @@
 				<h2>Right end</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=cassius-marsh"><h1><span class="ui-li-count">#99</span> Cassius Marsh</h1></a></li>
-					<li><a href="#player-info?player=donovan-carter"><span class="ui-li-count">#90</span> Donovan Carter</a></li>
-					<li><a href="#player-info?player=brandon-tuliaupupu"><span class="ui-li-count">#95</span> Brandon Tuliaupupu</a></li>
+					<li><a href="#player-info?player=owamagbe-odighizuwa"><span class="ui-li-count">#94</span> Owamagbe Odighizuwa</a></li>
+					<li><a href="#player-info?player=brandon-willis"><span class="ui-li-count">#92</span> Brandon Willis</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-lolb" data-rel="popup" id="pos-lolb">LOLB</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lolb">
 				<h2>Left outside linebacker</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player-info?player=jordan-zumwalt"><h1><span class="ui-li-count">#35</span> Jordan Zumwalt</h1></a></li>
-					<li><a href="#player-info?player=nate-iese"><span class="ui-li-count">#15</span> Nate Iese</a></li>
-					<li><a href="#player-info?player=aramide-olaniyan"><span class="ui-li-count">#14</span> Aramide Olaniyan</a></li>
+					<li><a href="#player-info?player=damien-holmes"><h1><span class="ui-li-count">#43</span> Damien Holmes</h1></a></li>
+					<li><a href="#player-info?player=jordan-zumwalt"><span class="ui-li-count">#35</span> Jordan Zumwalt</a></li>
+					<li><a href="#player-info?player=keenan-graham"><span class="ui-li-count">#40</span> Keenan Graham</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-lilb" data-rel="popup" id="pos-lilb">LILB</a>
 			<div data-role="popup" data-overlay-theme="a" data-position-to="window" class="ui-content" id="pop-lilb">
 				<h2>Left inside linebacker</h2><br />
 				<ul data-role="listview">
-					<li><a href="#player-info?player=damien-holmes"><h1><span class="ui-li-count">#43</span> Damien Holmes</h1></a></li>
-					<li><a href="#player-info?player=aaron-porter"><span class="ui-li-count">#30</span> Aaron Porter</a></li>
-					<li><a href="#player-info?player=todd-golper"><span class="ui-li-count">#55</span> Todd Golper</a></li>
+					<li><a href="#player-info?player=jordan-zumwalt"><h1><span class="ui-li-count">#35</span> Jordan Zumwalt</h1></a></li>
+					<li><a href="#player-info?player=dalton-hilliard"><span class="ui-li-count">#19</span> Dalton Hilliard</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-rilb" data-rel="popup" id="pos-rilb">RILB</a>
@@ -254,7 +252,6 @@
 				<h2>Left cornerback</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=sheldon-price"><h1><span class="ui-li-count">#22</span> Sheldon Price</h1></a></li>
-					<li><a href="#player-info?player=ishmael-adams"><span class="ui-li-count">#24</span> Ishmael Adams</a></li>
 					<li><a href="#player-info?player=fabian-moreau"><span class="ui-li-count">#10</span> Fabian Moreau</a></li>
 				</ul>
 			</div>
@@ -272,8 +269,7 @@
 				<h2>Strong safety</h2><br />
 				<ul data-role="listview">
 					<li><a href="#player-info?player=andrew-abbott"><h1><span class="ui-li-count">#26</span> Andrew Abbott</h1></a></li>
-					<li><a href="#player-info?player=dalton-hilliard"><span class="ui-li-count">#19</span> Dalton Hilliard</a></li>
-					<li><a href="#player-info?player=anthony-jefferson"><span class="ui-li-count">#8</span> Anthony Jefferson</a></li>
+					<li><a href="#player-info?player=randall-goforth"><span class="ui-li-count">#3</span> Randall Goforth</a></li>
 				</ul>
 			</div>
 		<a class="playerpos" href="#pop-fs" data-rel="popup" id="pos-fs">FS</a>
@@ -339,9 +335,9 @@
 			</li>
 			<li>Punt return
 				<ul data-role="listview">
-					<li><a href="#player-info?player=jordon-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
-					<li><a href="#player-info?player=shaquelle-evans"><span class="ui-li-count">#1</span> Shaquelle Evans</a></li>
 					<li><a href="#player-info?player=steven-manfro"><span class="ui-li-count">#33</span> Steven Manfro</a></li>
+					<li><a href="#player-info?player=andrew-abbott"><span class="ui-li-count">#26</span> Andrew Abbott</a></li>
+					<li><a href="#player-info?player=jordan-james"><span class="ui-li-count">#6</span> Jordon James</a></li>
 				</ul>
 			</li>
 			<li>Kickoff return
