Fixed a lot of bugs

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 			</li>
 			<li>Kickoff
 				<ul data-role="listview">
-					<li><a href="#player-info?player=kaimi-fairbairn"><span class="ui-li-count">#15</span> Ka’imi Fairbairn</a></li>
+					<li><a href="#player-info?player=kaimi-fairbairn"><span class="ui-li-count">#15</span> Ka&rsquo;imi Fairbairn</a></li>
 					<li><a href="#player-info?player=sean-covington"><span class="ui-li-count">#19</span> Sean Covington</a></li>
 				</ul>
 			</li>
@@ -337,7 +337,7 @@
 			</li>
 			<li>Punt return
 				<ul data-role="listview">
-					<li><a href="#player-info?player=shaquelle-evan"><span class="ui-li-count">#1</span> Shaquelle Evan</a></li>
+					<li><a href="#player-info?player=shaquelle-evans"><span class="ui-li-count">#1</span> Shaquelle Evans</a></li>
 					<li><a href="#player-info?player=devin-fuller"><span class="ui-li-count">#7</span> Devin Fuller</a></li>
 					<li><a href="#player-info?player=steven-manfro"><span class="ui-li-count">#33</span> Steven Manfro</a></li>
 					<li><a href="#player-info?player=randall-goforth"><span class="ui-li-count">#3</span> Randall Goforth </a></li>
